--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -121,35 +121,22 @@ http {
         }
 
         location /grafana/ {
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'https://localhost:8089' always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-
+            
             rewrite ^/grafana/(.*) /$1 break;
-            proxy_pass http://grafana:3000;
+            
+            proxy_pass https://grafana:3000;  # No trailing slash here
             proxy_http_version 1.1;
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto https;
-            proxy_set_header X-Forwarded-Ssl on;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Port $server_port;
             proxy_set_header X-Forwarded-Prefix /grafana;
             
-            # Debug headers
-            add_header X-Debug-Backend-URL $upstream_addr;
+            # Log headers for debugging
+            add_header X-Debug-Grafana-Upstream $upstream_addr;
             add_header X-Debug-Request-URI $request_uri;
-            
-            # Error handling
-            proxy_intercept_errors on;
-            error_page 502 = @backend_down;
         }
 
         location @backend_down {
