--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -1,8 +1,8 @@
 [server]
 protocol = http
 domain = localhost
-root_url = %(protocol)s://%(domain)s:8089/grafana/
-serve_from_sub_path = true
+root_url = %(protocol)s://%(domain)s:3000
+serve_from_sub_path = false
 
 [security]
 allow_embedding = true
